RC header color changes and spacing issues

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -12,7 +12,7 @@
       border: 1px solid #ddd; /* Add a thin border to each list item */
       margin-top: -1px; /* Prevent double borders */
       /*background-color: #f6f6f6; /* Add a grey background color */
-      padding: 12px; /* Add some padding */
+      padding: 15px; /* Add some padding */
       margin-bottom: 0px;
       text-transform: uppercase; 
       font-weight: bold; 
@@ -32,7 +32,7 @@
     .list-group li {
       border: 1px solid #ddd; /* Add a thin border to each list item */
       margin-top: -1px; /* Prevent double borders */
-      padding: 12px; /* Add some padding */
+      padding: 15px; /* Add some padding */
       margin-bottom: 0px;
       color: #29a5d6;
       cursor: pointer;
@@ -85,7 +85,7 @@
   margin-top: -1px; /* Prevent double borders */
   padding: 12px; /* Add some padding */
   margin-bottom: 0px;
-  color: #177ba2;
+  color: #3980b2;
   background: white;
 
   .header-label {
@@ -128,7 +128,7 @@
 
   .reset-btn {
     position: absolute;
-    color: #177ba2;
+    color: #a7a9ab;
     border-style: solid;
     border-width: 2px;
     font-weight: bold;
